Footer spacing issues

--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,12 @@
 	box-sizing: border-box;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
 /*header*/
 .header-bg {
 	background-color: black;
@@ -133,6 +139,10 @@ footer h6 {
 		transform: translateY(0%);
 		opacity: 1;
 	}
+}
+
+.spacer {
+	flex: 1;
 }
 
 /*get rid of the derp underlines on hover*/
