--- a/css/blog.css
+++ b/css/blog.css
@@ -6,6 +6,12 @@
 	box-sizing: border-box;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
 /*header*/
 .header-bg {
 	background-color: black;
@@ -124,4 +130,7 @@ section {
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 500;
 	font-size: 18px;
+}
+.spacer {
+	flex: 1;
 }
