--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
 
 /*header*/
 .header-bg {
@@ -100,45 +105,9 @@ footer h6 {
 	letter-spacing: 5px;
 	text-align: center;
 }
-#welcome {
-	font-family: 'Asap', sans-serif;
-	font-size: 90px;
-	text-align: center;
-	margin-bottom: 32px;
-}
-.line {
-	border: 1px solid black;
-	background-color: black;
-}
-#about, #blog, #projects, #resume {
-	margin-bottom: 5em;
-}
-#about-info, #blog-info, #projects-info, #resume-info {
-	margin-top: 1em;
-}
-#construct {
-	margin-top: -100px;
-	margin-left: 500px;
-}
-
-.noview {
-	opacity: 0;
-}
-.slideUp {
-	animation-name: slideUp;
-	animation-duration: 2s;
-}
-
-/*initial animation*/
-@-webkit-keyframes slideUp {
-	from {
-		opacity: 0;
-		transform: translateY(70%);
-	}
-	to {
-		opacity: 1;
-		transform: translateY(0%);
-	}
+.spacer {
+	flex: 1;
+	background-color: #F2FAFB;
 }
 
 /*get rid of the derp underlines on hover*/
